<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="500dp"
    android:padding="@dimen/item_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/neoxam" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/popup_stage_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popop_stage_name"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="@+id/cardView2"
        android:layout_marginLeft="30dp"
        style="@style/titleTextStyle"/>

    <ImageView
        android:id="@+id/colse_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_close"
        android:layout_marginRight="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView2" />

    <TextView
        android:id="@+id/popop_stage_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/popop_stage_description_title"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        style="@style/titleTextStyle"/>

    <TextView
        android:id="@+id/popop_stage_description_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popop_stage_description_subtitle"
        app:layout_constraintStart_toStartOf="@+id/popop_stage_description_title"
        app:layout_constraintTop_toBottomOf="@+id/popop_stage_description_title"
        style="@style/DefaultTextStyle"/>

    <TextView
        android:id="@+id/popop_stage_duration_title"
        style="@style/titleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popop_stage_duration_title"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="@+id/popop_stage_description_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/popop_stage_description_subtitle" />

    <TextView
        android:id="@+id/popop_stage_duration_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popop_stage_duration_subtitle"
        app:layout_constraintStart_toStartOf="@+id/popop_stage_duration_title"
        app:layout_constraintTop_toBottomOf="@+id/popop_stage_duration_title"
        style="@style/DefaultTextStyle"/>

    <TextView
        android:id="@+id/popop_stage_nbstagiaires_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popop_stage_nbstagiaires_title"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="@+id/popop_stage_duration_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/popop_stage_duration_subtitle"
        style="@style/titleTextStyle"/>

    <TextView
        android:id="@+id/popop_stage_nbstagiaires_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popop_stage_nbstagiaires_subtitle"
        app:layout_constraintStart_toStartOf="@+id/popop_stage_nbstagiaires_title"
        app:layout_constraintTop_toBottomOf="@+id/popop_stage_nbstagiaires_title"
        style="@style/DefaultTextStyle"/>

    <View
        android:id="@+id/view_separation"
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popop_stage_nbstagiaires_subtitle" />

    <ImageView
        android:id="@+id/delete_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_trash"
        android:layout_marginRight="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_separation"
        app:layout_constraintEnd_toStartOf="@+id/view_separation"
        app:layout_constraintTop_toTopOf="@+id/view_separation" />

    <ImageView
        android:id="@+id/star_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_unstar"
        android:layout_marginLeft="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_separation"
        app:layout_constraintStart_toEndOf="@+id/view_separation"
        app:layout_constraintTop_toTopOf="@+id/view_separation" />

</androidx.constraintlayout.widget.ConstraintLayout>